Ajustes portifólio e criação da cafeteria

--- a/Dia01 Aula 01 e 02/index.html
+++ b/Dia01 Aula 01 e 02/index.html
@@ -16,7 +16,14 @@
         Meu objetivo com a programação é criar projetos que
         <u>ajudem a vida das pessoas</u>
     </p>
+    <p>
+        Atualmente estou cursando o 3°(terceiro) semestre de <strong>Análise e Desenvolvimento de sistemas</strong>
+        na <i>Universidade Cruzeiro do Sul</i>
+    </p>
 
-    <a href="https://www.linkedin.com/in/moscardijoao/">Meu LinkedIn</a>
+    <a href="./Site Cafeteria/cafeteria.html">DevCoffe a cafeteria do seu código</a><br>
+    <a href="https://www.linkedin.com/in/moscardijoao/">Meu LinkedIn</a><br>
+    <a href="https://github.com/J0ax771zz">Meu GitHub</a><br>
+    <a href="https://github.com/J0ax771zz/alparAcademyDesafios">Desafios de JavaScript</a>
     </body>
 </html>
