--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
     <body>
-    <img src="./assets/images/foto.png" alt="Minha foto" width="200px" />
+    <img src="./Dia01 Aula 01 e 02/assets/images/foto.png" alt="Minha foto" width="200px" />
     <h1>Meu nome é João Paulo</h1>
     <h2>Sou desenvolver Full-Stack</h2>
     <p>
