--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         na <i>Universidade Cruzeiro do Sul</i>
     </p>
 
-    <a href="./Site Cafeteria/cafeteria.html">DevCoffe a cafeteria do seu código</a><br>
+    <a href="./Dia01 Aula 01 e 02/Site Cafeteria/cafeteria.html">DevCoffe a cafeteria do seu código</a><br>
     <a href="https://www.linkedin.com/in/moscardijoao/">Meu LinkedIn</a><br>
     <a href="https://github.com/J0ax771zz">Meu GitHub</a><br>
     <a href="https://github.com/J0ax771zz/alparAcademyDesafios">Desafios de JavaScript</a>
