--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
     <body>
-    <img src="./Dia01 Aula 01 e 02/assets/images/foto.png" alt="Minha foto" width="200px" />
+    <img src="./Dia 01/assets/images/foto.png" alt="Minha foto" width="200px" />
     <h1>Meu nome é João Paulo</h1>
     <h2>Sou desenvolver Full-Stack</h2>
     <p>
@@ -21,7 +21,7 @@
         na <i>Universidade Cruzeiro do Sul</i>
     </p>
 
-    <a href="./Dia01 Aula 01 e 02/Site Cafeteria/cafeteria.html">DevCoffe a cafeteria do seu código</a><br>
+    <a href="./Dia 02/cafeteria.html">DevCoffe a cafeteria do seu código</a><br>
     <a href="https://www.linkedin.com/in/moscardijoao/">Meu LinkedIn</a><br>
     <a href="https://github.com/J0ax771zz">Meu GitHub</a><br>
     <a href="https://github.com/J0ax771zz/alparAcademyDesafios">Desafios de JavaScript</a>
