Atualizações na cafeteria, e criação de um site empresarial

--- a/Dia 02/cafeteria.html
+++ b/Dia 02/cafeteria.html
@@ -6,111 +6,178 @@
     <title>DevCoffe</title>
 </head>
 <body>
-    <header>
-        <h1 style="margin-left: 27%;">Seu código fica melhor com café</h1>
-        <img src="./img/logo.png" alt="logo cafeteria DevCoffe" width="220px" style="margin-left: 38%;">
-    </header>
-        <h2>Confira nosso menu</h2>
+    <table style="width: 100%; height: 150px; background: rgb(112, 66, 66);">
+        <thead >
+            <tr>
+                <th>
+                    <img width="120px" src="./img/logo.png" alt="Logo cafeteria DevCoffe">
+                </th>
+            </tr>
+            <tr>
+                <th style="height: 30px; background: burlywood;">DevCoffe - Seu código fica melhor com café</th>
+            </tr>
+        </thead>
+    </table><br>
 
-        <p><strong>Bebidas</strong></p>
-        <div style="display: flex;">
-            <ol><strong>Cafés tradicionais</strong>
-                <li>Café expresso
-                    <ul>
-                        <li><strong>Ingredientes</strong> Café</li>
-                        <li><strong>Aviso para alérgicos</strong> Contém cafeína</li>
-                    </ul>
-                </li>
-                <li>Café americano
-                    <ul>
-                        <li><strong>Ingredientes</strong> Café, água</li>
-                        <li><strong>Aviso para alérgicos</strong> Contém cafeína</li>
-                    </ul>
-                </li>
-                <li>Café com leite
-                    <ul>
-                        <li><strong>Ingredientes</strong> Café</li>
-                        <li><strong>Aviso para alérgicos</strong> Contém <strong>lactose e cafeína</strong></li>
-                    </ul>
-                </li>
-            </ol>
-            <ol><strong>Bebidas Quentes</strong>
-                <li>Chocolate Quente
-                    <ul>
-                        <li><strong>Ingredientes</strong> Leite, chocolate/cacau, açucar</li>
-                        <li><strong>Aviso para alérgicos</strong> Contém <strong>lactose, cacau</strong></li>
-                    </ul>
-                </li>
-                <li>Chá preto, verde ou de ervas
-                    <ul>
-                        <li><strong>Ingredientes</strong> Folhas ou ervas (Exemplo: chá preto, chá verde, camolila)</li>
-                        <li><strong>Aviso para alérgicos</strong> Chá preto e verde contém <strong>cafeína</strong></li>
-                    </ul>
-                </li>
-                <li>Leite quente com mel ou canela
-                    <ul>
-                        <li><strong>Ingredientes</strong> Leite, mel(opcional), canela</li>
-                        <li><strong>Aviso para alérgicos</strong> Contém <strong>lactose</strong>. Pode conter mel</li>
-                    </ul>
-                </li>
-            </ol>
-            <ol><strong>Sucos e outras opções</strong>
-                <li>Suco natural
-                    <ul>
-                        <li><strong>Sabores</strong> laranja, limão, maracujá e uva</li>
-                        <li><strong>Aviso para alérgicos</strong> Pode conter traços de frutas cítricas</li>
-                    </ul>
-                </li>
-                <li>Água de coco
-                    <ul>
-                        <li><strong>Ingredientes</strong> Água de coco</li>
-                        <li><strong>Aviso para alérgicos</strong> Pode conter frutas tropicais</li>
-                    </ul>
-                </li>
-            </ol>
-        </div>
+    <h1 style="margin-left: 38%">Confira nosso cardápio</h1><br>
+<section style="display: flex;">
+    <table style="height:50px; padding: 5px; background: burlywood; border-radius: 5px;">
+        <thead>
+            <tr>
+                <th>Bebidas</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><ol><strong>Cafés tradicionais</strong>
+                    <li>Café expresso
+                        <ul>
+                            <li><strong>Ingredientes</strong> Café</li>
+                            <li><strong>Aviso para alérgicos</strong> Contém cafeína</li>
+                        </ul>
+                    </li>
+                    <li>Café americano
+                        <ul>
+                            <li><strong>Ingredientes</strong> Café, água</li>
+                            <li><strong>Aviso para alérgicos</strong> Contém cafeína</li>
+                        </ul>
+                    </li>
+                    <li>Café com leite
+                        <ul>
+                            <li><strong>Ingredientes</strong> Café</li>
+                            <li><strong>Aviso para alérgicos</strong> Contém <strong>lactose e cafeína</strong></li>
+                        </ul>
+                    </li>
+                </ol></td>
+            </tr>
+        </tbody>
+    </table>
 
-        <div style="display: flex;">
-            <p><strong>Salgados</strong></p>
-            <ol>Salgodos Tradicionais
-                <li>Pão de queijo
-                    <ul>
-                        <li><strong>Ingredientes</strong> Polvilho, queijo, ovos, leite</li>
-                        <li><strong>Aviso para alérgicos</strong> Contém <strong>lactose, ovos e glúten</strong></li>
-                    </ul>
-                </li>
-                <li>Coxinha
-                    <ul>
-                        <li><strong>Ingredientes</strong> Frango desfiado, farinha de trigo, leite e ovos</li>
-                        <li><strong>Aviso para alérgicos</strong> Contém <strong>lactose, ovos e glúten</strong></li>                    </ul>
-                </li>
-                <li>Esfiha(carne, queijo, calabresa, palmito)
-                    <ul>
-                        <li><strong>Ingredientes</strong> Farinha de trigo, leite, manteiga, recheio variados</li>
-                        <li><strong>Aviso para alérgicos</strong> Contém <strong>lactose, ovos e glúten</strong></li>
-                    <ul>
-                </li>
-            </ol>
-            <ol><strong>Doces</strong>
-                <li>Bolo(chocolate, fubá, limão)
-                    <ul>
-                        <li><strong>Ingredientes</strong> Farinha de trigo, leite, ovos, sabor variados</li>
-                        <li><strong>Aviso para alérgicos</strong> Contém <strong>lactose, ovos, glúten pode conter cacau</strong></li>
-                    </ul>
-                </li>
-                <li>Cookies
-                    <ul>
-                        <li><strong>Ingredientes</strong> Farinha de trigo, açúcar, leite, ovos, chocolate</li>
-                        <li><strong>Aviso para alérgicos</strong> Contém <strong>lactose, ovos, glúten, cacau</strong></li>
-                    </ul>
-                </li>
-                <li>Pudim de leite condensado
-                    <ul>
-                        <li><strong>Ingredientes</strong> Leite condensado, leite, ovos, açúcar</li>
-                        <li><strong>Aviso para alérgicos</strong> Contém <strong>lactose e ovos</strong></li>
-                    </ul>
-                </li>
-            </ol>
-        </div>
+    <table style="height:50px; margin-left: 8px; padding: 5px; background: burlywood; border-radius: 5px;">
+        <thead>
+            <tr>
+                <th>Salgados</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    <ol><strong>Salgados Tradicionais</strong>
+                        <li>Pão de queijo
+                            <ul>
+                                <li><strong>Ingredientes</strong> Polvilho, queijo, ovos, leite</li>
+                                <li><strong>Aviso para alérgicos</strong> Contém <strong>lactose, ovos e glúten</strong></li>
+                            </ul>
+                        </li>
+                        <li>Coxinha
+                            <ul>
+                                <li><strong>Ingredientes</strong> Frango desfiado, farinha de trigo, leite e ovos</li>
+                                <li><strong>Aviso para alérgicos</strong> Contém <strong>lactose, ovos e glúten</strong></li>                    </ul>
+                        </li>
+                        <li>Esfiha(carne, queijo, calabresa, palmito)
+                            <ul>
+                                <li><strong>Ingredientes</strong> Farinha de trigo, leite, manteiga, recheio variados</li>
+                                <li><strong>Aviso para alérgicos</strong> Contém <strong>lactose, ovos e glúten</strong></li>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
+    <table style="height:50px; margin-left: 8px; padding: 3px; background: burlywood; border-radius: 5px;">
+        <thead>
+            <tr>
+                <th>Doces</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    <ol><strong>Doces</strong>
+                        <li>Bolo(chocolate, fubá, limão)
+                            <ul>
+                                <li><strong>Ingredientes</strong> Farinha de trigo, leite, ovos, sabor variados</li>
+                                <li><strong>Aviso para alérgicos</strong> Contém <strong>lactose, ovos, glúten pode conter cacau</strong></li>
+                            </ul>
+                        </li>
+                        <li>Cookies
+                            <ul>
+                                <li><strong>Ingredientes</strong> Farinha de trigo, açúcar, leite, ovos, chocolate</li>
+                                <li><strong>Aviso para alérgicos</strong> Contém <strong>lactose, ovos, glúten, cacau</strong></li>
+                            </ul>
+                        </li>
+                        <li>Pudim de leite condensado
+                            <ul>
+                                <li><strong>Ingredientes</strong> Leite condensado, leite, ovos, açúcar</li>
+                                <li><strong>Aviso para alérgicos</strong> Contém <strong>lactose e ovos</strong></li>
+                            </ul>
+                        </li>
+                    </ol>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</section>
+<br>
+<h2 style="margin-left: 39%">Horário de funcionamento</h2>
+<br>
+
+<section > 
+    <table border="1px" cellspacing="0" cellpadding="5px" style="height:50px; margin-left: 28%; padding: 3px; background: whitesmoke; ">
+        <thead>
+            <tr>
+                <th>Horários</th>
+                <th>Segunda</th>
+                <th>Terça</th>
+                <th>Quarta</th>
+                <th>Quinta</th>
+                <th>Sexta</th>
+                <th>Sábado</th>
+                <th>Domingos e <br> feriados</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><strong>Manhã</strong></td>
+                <td>08:00 <br>
+                    12:00
+                </td>
+                <td rowspan="2">Fechado</td>
+                <td>08:00 <br>
+                    12:00
+                </td>
+                <td>08:00 <br>
+                    12:00
+                </td>
+                <td>08:00 <br>
+                    12:00
+                </td>
+                <td>08:00 <br>
+                    12:00
+                </td>
+                <td rowspan="2">08:00 <br>
+                    12:00
+                </td>
+            </tr>
+            <tr>
+                <td><strong>Tarde</strong></td>
+                <td>14:00 <br>
+                    18:00
+                </td>
+                <td>14:00 <br>
+                    18:00
+                </td>
+                <td>14:00 <br>
+                    18:00
+                </td>
+                <td>14:00 <br>
+                    18:00
+                </td>
+                <td>14:00 <br>
+                    18:00
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</section>
 </body>
 </html>
