--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         na <i>Universidade Cruzeiro do Sul</i>
     </p>
 
+    <a href="./Dia 03/projeto-empresa.html">TechFix sua solução técnológica</a><br>
     <a href="./Dia 02/cafeteria.html">DevCoffe a cafeteria do seu código</a><br>
     <a href="https://www.linkedin.com/in/moscardijoao/">Meu LinkedIn</a><br>
     <a href="https://github.com/J0ax771zz">Meu GitHub</a><br>
