Alterações na cafeteria, e criação dos testes de estudos

--- a/Dia 03/projeto-empresa.html
+++ b/Dia 03/projeto-empresa.html
@@ -25,7 +25,7 @@
                 <h2>Bem-vindo à TechFix Soluções</h2>
                 <p>Especialistas em suporte técnico remoto e manutenção de computadores.</p>
                 <h3>Horário de Funcionamento</h3>
-                <table border="1" cellspacing="0" cellpading="8px">
+                <table border="1" cellspacing="0" cellpading="8">
                     <thead>
                         <tr>
                             <th>Segunda a <br>
