--- a/Dia 02/cafeteria.html
+++ b/Dia 02/cafeteria.html
@@ -179,5 +179,44 @@
         </tbody>
     </table>
 </section>
+
+<!-- Inicio da área de contato-->
+    
+
+    <form width="80%" align="center" style="margin-top: 30px; background: burlywood;">
+        <h1 align="center">
+            Entre em contato conosco
+        </h1>
+        <label for="nome">
+            Informe seu nome:
+            <input type="text" id="nome" placeholder="Digite seu nome completo: " required>
+        </label>
+        <br><br>
+        <label for="email">
+            Informe seu E-mail:
+            <input type="email" id="email" placeholder="Digite seu E-mail: " required>
+        </label>
+        <br><br>
+        <label for="telefone">
+            Informe seu Telefone:
+            <input type="tel" id="telefone" placeholder="Digite seu telefone: ">
+        </label>
+        <br><br>
+        <label for="assunto">
+            Informe o assunto:
+            <input type="text" id="assunto" placeholder="Descreva brevemente o assunto: " required>
+        </label>
+        <br><br>
+        <label for="mensagem">
+            <p>Digite a mensagem que deseja enviar</p>
+            <textarea name="mensagem" id="mensagem" required></textarea>
+        </label>
+        <br><br>
+        <button type="submit">Enviar</button>
+    </form>
+
+    <footer align="center" style="height: 50px; background-color: rgb(112, 66, 66); color: white;">
+        <h3>© DevCoffe - 2025 Todos os direitos reservados</h3>
+    </footer>
 </body>
 </html>
