Criação do podcast Dia 05

--- a/Testes de Estudos/Portifolio Melhorado/index.html
+++ b/Testes de Estudos/Portifolio Melhorado/index.html
@@ -14,7 +14,7 @@
         </tr>
         <tr style="height: 40px; font-size: 22px; font-weight: bolder;">
             <td><a href="#home" style="text-decoration: none; color:orange;">HOME</a></td>
-            <td><a href="#stack" style="text-decoration: none; color:orange;">STACKS</a></td>
+            <td><a href="#stacks" style="text-decoration: none; color:orange;">STACKS</a></td>
             <td><a href="#" style="text-decoration: none; color:orange;">CONTACT</a></td>
         </tr>
     </table>
@@ -35,7 +35,7 @@
         </tr>
     </table>
 
-    <table id="stack" width="50%" align="center" border="3" cellspacing="0" style="margin-top:08%; border-color:orange; border-radius: 08px;">
+    <table id="stacks" width="50%" align="center" border="3" cellspacing="0" style="margin-top:08%; border-color:orange; border-radius: 08px;">
         <thead>
             <tr>
                 <th colspan="2" style="color: orange;">STACKS</th>
