--- a/Dia 05/podcast.html
+++ b/Dia 05/podcast.html
@@ -114,7 +114,7 @@
         </form>
     </div>
     <footer align="center" width="100%" style=" height: 50px; padding: 02px; background: rgb(219, 218, 218);">
-      <h3>© Tech Growth - 2025 Todos os direitos reservados</h3>
+      <h3>© Tech Growth - 2025 Todos os direitos reservados João Moscardi e Gustavo Oliveira</h3>
     </footer>
   </body>
 </html>
