--- a/Testes de Estudos/Portifolio Melhorado/index.html
+++ b/Testes de Estudos/Portifolio Melhorado/index.html
@@ -8,16 +8,14 @@
 <body style="margin: 0; padding: 0; background:rgb(36, 34, 34); font-family:Arial, Helvetica, sans-serif">
 
 
-    <table width="100%" border="1px" align="center" cellspacing="0" style="text-align: center; background:rgb(36, 34, 34);">
-        <tr>
-            <td colspan="3"><h1 style="text-align: center; color: orange;">João Moscardi - Full-Stack Developer</h1></td>
-        </tr>
-        <tr style="height: 40px; font-size: 22px; font-weight: bolder;">
-            <td><a href="#home" style="text-decoration: none; color:orange;">HOME</a></td>
-            <td><a href="#stacks" style="text-decoration: none; color:orange;">STACKS</a></td>
-            <td><a href="#" style="text-decoration: none; color:orange;">CONTACT</a></td>
-        </tr>
-    </table>
+    <header width="100%" border="1px" align="center" cellspacing="0" style="text-align: center; background:rgb(36, 34, 34); ">
+        <h1 style="text-align: center; color: orange;">João Moscardi - Full-Stack Developer</h1>
+        <nav style="height: 40px; font-size: 22px; font-weight: bolder;">
+            <a href="#home" style="text-decoration: none; color:orange;">HOME</a>
+            <a href="#stacks" style="text-decoration: none; color:orange;">STACKS</a>
+            <a href="#" style="text-decoration: none; color:orange;">CONTACT</a>
+        </nav>
+    </header>
 
     <table id="home" width="80%" align="center" style="margin-top: 30px;" >
         <tr>
