Mudanças nas pastas e alteraçõe em arquivos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
     <body>
-    <img src="./Dia 01/assets/images/foto.png" alt="Minha foto" width="200px" />
+    <img src="./portifolio/assets/images/foto.png" alt="Minha foto" width="200px" />
     <h1>Meu nome é João Paulo</h1>
     <h2>Sou desenvolver Full-Stack</h2>
     <p>
@@ -21,9 +21,9 @@
         na <i>Universidade Cruzeiro do Sul</i>
     </p>
 
-    <a href="./Dia 05/podcast.html">Tech Growth - Um podcast tecnológico</a><br>
-    <a href="./Dia 03/projeto-empresa.html">TechFix sua solução técnológica</a><br>
-    <a href="./Dia 02/cafeteria.html">DevCoffe a cafeteria do seu código</a><br>
+    <a href="./podcast/index.html">Tech Growth - Um podcast tecnológico</a><br>
+    <a href="./sitetabelas/index.html">TechFix sua solução técnológica</a><br>
+    <a href="./cafeteria/index.html">DevCoffe a cafeteria do seu código</a><br>
     <a href="https://www.linkedin.com/in/moscardijoao/">Meu LinkedIn</a><br>
     <a href="https://github.com/J0ax771zz">Meu GitHub</a><br>
     <a href="https://github.com/J0ax771zz/alparAcademyDesafios">Desafios de JavaScript</a>
