--- a/podcast/index.html
+++ b/podcast/index.html
@@ -58,9 +58,9 @@
         <p>Gostou do vídeo ou se interessou pela oportunidade?<br> Então fique de olho no perfil da Alpar no LinkedIn <br>
         E se prepare para as próximas oportunidades que podem vir <br> Abaixo deixamos também alguns comentário que merecem sua atenção </p> <br>
         <a style="padding-right: 15px;" href="https://alpar.com.br/">
-            <img src="./assets/alpar-logo.png" alt="link para o site da Alapar" width="50px"></a>
+            <img src="./assets/img/alpar-logo.png" alt="link para o site da Alapar" width="50px"></a>
         <a href="https://www.linkedin.com/company/alparbr/">
-        <img src="./assets/linkedin.png" alt="link para o linkedIn da Alapar" width="50px"></a>
+        <img src="./assets/img/linkedin.png" alt="link para o linkedIn da Alapar" width="50px"></a>
     </div>
 
     <div id="comentarios" align="center" style="margin-top: 5%;">
@@ -69,12 +69,12 @@
         
         <div>
             <p>João: Como funciona o Rocket Program</p>
-            <audio controls src="./assets/audioJoao.ogg" type="audio/mp4"></audio>
+            <audio controls src="./assets/audio/audioJoao.ogg" type="audio/mp4"></audio>
         </div>
         <br>
         <div>
             <p>Gustavo: Conheça um pouco sobre a Alpar</p>
-            <audio controls src="./assets/audioGustavo.ogg" type="audio/mp4"></audio>
+            <audio controls src="./assets/audio/audioJoao.ogg" type="audio/mp4"></audio>
         </div>
     </div>
 
