criação do card e alterações

--- a/podcast/index.html
+++ b/podcast/index.html
@@ -13,7 +13,7 @@
     >
       <tr>
         <td colspan="4">
-          <img src="./assets/logo.png" alt="" width="150px" align="center" style=" border: 5px solid rgb(99, 250, 255);border-radius: 100px"/>
+          <img src="./assets/img/logo.png" alt="" width="150px" align="center" style=" border: 5px solid rgb(99, 250, 255);border-radius: 100px"/>
         </td>
       </tr>
       <tbody>
@@ -74,7 +74,7 @@
         <br>
         <div>
             <p>Gustavo: Conheça um pouco sobre a Alpar</p>
-            <audio controls src="./assets/audio/audioJoao.ogg" type="audio/mp4"></audio>
+            <audio controls src="./assets/audio/audioGustavo.ogg" type="audio/mp4"></audio>
         </div>
     </div>
 
