--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         na <i>Universidade Cruzeiro do Sul</i>
     </p>
 
+    <a href="./card/index.html">Meu LinkTree</a><br>
     <a href="./blog/index.html">Em breve - Blog</a><br>
     <a href="./podcast/index.html">Tech Growth - Um podcast tecnológico</a><br>
     <a href="./sitetabelas/index.html">TechFix sua solução técnológica</a><br>
