Alterando o portifolio e outros sites

--- a/estudos/Portifolio Melhorado/index.html
+++ b/estudos/Portifolio Melhorado/index.html
@@ -22,9 +22,9 @@
         <section>
             <h1>Hey, i'am João Moscardi</h1>
             <h2>Professional Full-Stack Developer</h2>
-            <p>Cursando o 3°(terceiro) semestre de <br> Analise e desenvolvimento de Sistemas <br>
-            na Universidade Cruzeiro do Sul, apaixonado por tecnologia <br>
-            e atualmente participante do Rocket Program 2.0</p>
+            <p>Studying the 3rd(third) semester of<br> Analise e desenvolvimento de Sistemas <br>
+            at Universidade Cruzeiro do Sul, passionate about technology <br>
+            and participant in Alpar Service's Rocket Program 2.0</p>
         </section>
     </main>
 
@@ -68,8 +68,35 @@
         </table>
     </section>
 
+    <h2 class="myprojects">My Projects</h2>
+
     <section class="projects" id="projects">
-        
+        <a href="">
+            <h3>CoffeShop</h3>
+            <img class="projeto" src="./assets/img/americano.jfif" alt="">
+        </a>
+        <a href="">
+            <h3>Table Site</h3>
+            <img class="projeto" src="./assets/img/techfix.webp" alt="">
+        </a>
+        <a href="">
+            <h3>Forms</h3>
+            <img class="projeto" src="./assets/img/forms.webp" alt="">
+        </a>
+        <a href="">
+            <h3>Podcast</h3>
+            <img class="projeto" src="./assets/img/logo.png" alt="">
+        </a>
+        <a href="">
+            <h3>Card - LinkTree</h3>
+            <img class="projeto" src="./assets/img/linktree.webp" alt="">
+        </a>
+        <a href="">
+            <h3>Clones</h3>
+            <img class="projeto" src="./assets/img/ᴋɪɴɢ ᴅɪᴄᴇ ɪᴄᴏɴ.jfif" alt="">
+        </a>
     </section>
+
+    
 </body>
 </html>
