--- a/index.html
+++ b/index.html
@@ -1,33 +1,102 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Meu Portifólio - João Moscardi</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./portifolio/assets/styles/style.css">
+    <title>João Moscardi - Full-Stack Developer</title>
 </head>
+<body>
+    <header class="cabecalho">
+        <h1>João Moscardi - Full-Stack Developer</h1>
+        <nav class="navbar">
+            <a href="#home">HOME</a>
+            <a href="#stacks">STACKS</a>
+            <a href="#projects">PROJECTS</a>
+            <a href="">CONTACT</a>
+        </nav>
+    </header>
 
-    <body>
-    <img src="./portifolio/assets/images/foto.png" alt="Minha foto" width="200px" />
-    <h1>Meu nome é João Paulo</h1>
-    <h2>Sou desenvolver Full-Stack</h2>
-    <p>
-        Sou apaixonado por <strong>criar e programar sites e sistemas</strong> para
-        <i>internet</i>, <strong>desktop e mobile</strong>
-    </p>
-    <p>
-        Meu objetivo com a programação é criar projetos que
-        <u>ajudem a vida das pessoas</u>
-    </p>
-    <p>
-        Atualmente estou cursando o 3°(terceiro) semestre de <strong>Análise e Desenvolvimento de sistemas</strong>
-        na <i>Universidade Cruzeiro do Sul</i>
-    </p>
+    <main class="apresentacao" id="home">
+        <img src="./portifolio/assets/img/ᴋɪɴɢ ᴅɪᴄᴇ ɪᴄᴏɴ.jfif" alt="foto perfil">
+        <section>
+            <h1>Hey, i'am João Moscardi</h1>
+            <h2>Professional Full-Stack Developer</h2>
+            <p>Studying the 3rd(third) semester of<br> Analise e desenvolvimento de Sistemas <br>
+            at Universidade Cruzeiro do Sul, passionate about technology <br>
+            and participant in Alpar Service's Rocket Program 2.0</p>
+        </section>
+    </main>
 
-    <a href="./card/index.html">Meu LinkTree</a><br>
-    <a href="./blog/index.html">Em breve - Blog</a><br>
-    <a href="./podcast/index.html">Tech Growth - Um podcast tecnológico</a><br>
-    <a href="./sitetabelas/index.html">TechFix sua solução técnológica</a><br>
-    <a href="./cafeteria/index.html">DevCoffe a cafeteria do seu código</a><br>
-    <a href="https://www.linkedin.com/in/moscardijoao/">Meu LinkedIn</a><br>
-    <a href="https://github.com/J0ax771zz">Meu GitHub</a><br>
-    <a href="https://github.com/J0ax771zz/alparAcademyDesafios">Desafios de JavaScript</a>
-    </body>
+    <section class="stacks" id="stacks">
+        <table>
+            <thead>
+                <tr>
+                    <th colspan="3"><h1>Stacks</h1></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <img src="./portifolio/assets/img/c-sharp.png" alt="logo c-sharp na aba stacks">
+                        <h3>C#</h3>
+                    </td>
+                    <td>
+                        <img src="./portifolio/assets/img/js.png" alt="logo JavaScript na aba stacks">
+                        <h3>JavaScript</h3>
+                    </td>
+                    <td>
+                        <img src="./portifolio/assets/img/java.png" alt="logo Java na aba stacks">
+                        <h3>Java</h3>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="./portifolio/assets/img/html.png" alt="logo HTML na aba stacks">
+                        <h3>HTML 5</h3>
+                    </td>
+                    <td>
+                        <img src="./portifolio/assets/img/css-3.png" alt="logo CSS 3 na aba stacks">
+                        <h3>CSS 3</h3>
+                    </td>
+                    <td>
+                        <img src="./portifolio/assets/img/python.png" alt="logo Python na aba stacks">
+                        <h3>Python</h3>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
+    <h2 class="myprojects">My Projects</h2>
+
+    <section class="projects" id="projects">
+        <a href="./cafeteria/index.html">
+            <h3>CoffeShop</h3>
+            <img class="projeto" src="./portifolio/assets/img/americano.jfif" alt="">
+        </a>
+        <a href="./sitetabelas/index.html">
+            <h3>Table Site</h3>
+            <img class="projeto" src="./portifolio/assets/img/techfix.webp" alt="">
+        </a>
+        <a href="./formularios/index.html">
+            <h3>Forms</h3>
+            <img class="projeto" src="./portifolio/assets/img/forms.webp" alt="">
+        </a>
+        <a href="./podcast/index.html">
+            <h3>Podcast</h3>
+            <img class="projeto" src="./portifolio/assets/img/logo.png" alt="">
+        </a>
+        <a href="./card/index.html">
+            <h3>Card - LinkTree</h3>
+            <img class="projeto" src="./portifolio/assets/img/linktree.webp" alt="">
+        </a>
+        <a href="">
+            <h3>Estudos</h3>
+            <img class="projeto" src="./portifolio/assets/img/ᴋɪɴɢ ᴅɪᴄᴇ ɪᴄᴏɴ.jfif" alt="">
+        </a>
+    </section>
+
+    
+</body>
 </html>
