--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <h3>CoffeShop</h3>
             <img class="projeto" src="./portifolio/assets/img/americano.jfif" alt="">
         </a>
-        <a href="./sitetabelas/index.html">
-            <h3>Table Site</h3>
+        <a href="./techfix/index.html">
+            <h3>TechFix</h3>
             <img class="projeto" src="./portifolio/assets/img/techfix.webp" alt="">
         </a>
         <a href="./formularios/index.html">
@@ -91,12 +91,14 @@
             <h3>Card - LinkTree</h3>
             <img class="projeto" src="./portifolio/assets/img/linktree.webp" alt="">
         </a>
+        <a href="./sitetabelas/index.html">
+            <h3>Table Site</h3>
+            <img class="projeto" src="./portifolio/assets/img/ᴋɪɴɢ ᴅɪᴄᴇ ɪᴄᴏɴ.jfif" alt="">
+        </a>
         <a href="">
             <h3>Estudos</h3>
             <img class="projeto" src="./portifolio/assets/img/ᴋɪɴɢ ᴅɪᴄᴇ ɪᴄᴏɴ.jfif" alt="">
         </a>
     </section>
-
-    
 </body>
 </html>
