--- a/sitetabelas/index.html
+++ b/sitetabelas/index.html
@@ -1,157 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="./assets/img/favicon-32x32.png">
-    <link rel="stylesheet" href="./assets/styles/style.css">
-    <title>TechFix - Soluções</title>
+    <title>TechFix Soluções</title>
 </head>
-<body>
-    <header class="navbar">
-        <h1 id="techfix">TechFix</h1>
-        <nav class="items">
-            <a href="#about">About Us</a>
-            <a href="#princing">Princing</a>
-            <a href="#schedules">Schedules</a>
-            <a href="#contact">Contact-Us</a>
-        </nav>
-    </header>
+<body style="margin: 0; padding: 0; text-align: center;">
 
-
-    <main class="about">
-        <h1 id="about">Discover our history</h1>
-        <section class="history">
-            <img id="fachada" src="./assets/img/fachada.jfif" alt="fachada da empresa TechFix">
-
-            <section class="text">
-                <p>Founded on March 15, 2018, Tech-Fix was born with the aim of providing high-quality technical support.
-                    For companies and individual customers facing problems with computers, networks and systems. Created by
-                     a group of experts passionate about technology, the company quickly stood out for its excellent service.
-                      efficiency in problem solving.</p>
-            </section>
-        </section>
-    </main>
-
-
-    <section class="princing">
-        <h2>Check our services</h2>
-
-        <section class="prices">
-            <ul class="list">
-                <li>
-                    <p>Formatting</p>
-                    <h3>$40</h3>
-                </li>
-                <li id="princing">
-                    <p>Remove Virus</p>
-                    <h3>$50</h3>
-                </li>
-                <li>
-                    <p>Technical Consultancy</p>
-                    <h3>$100</h3>
-                </li>
-            </ul>
-        </section>
-    </section>
-
-
-    <section class="schedules" id="schedules">
-        <table cellspacing="0" cellpading="8px">
-            <thead>
-                <tr>
-                    <th colspan="8"><h1>Schedules</h1></th>
-                </tr>
-                <tr>
-                    <th>Schedules</th>
-                    <th>Monday</th>
-                    <th>Tuesday</th>
-                    <th>Wednesday</th>
-                    <th>Thursday</th>
-                    <th>Friday</th>
-                    <th>Saturday</th>
-                    <th>Sunday</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                     <td><strong>Morning</strong></td>
-                      <td>
-                        08:00 <br>
-                        12:00
-                      </td>
-                      <td>
-                        08:00 <br>
-                        12:00
-                      </td>
-                      <td>
-                        08:00 <br>
-                        12:00
-                      </td>
-                      <td>
-                        08:00 <br>
-                        12:00
-                      </td>
-                      <td>
-                        08:00 <br>
-                        12:00
-                      </td>
-                      <td>
-                        09:00 <br>
-                        12:00
-                      </td>
-                      <td rowspan="2">
-                        Closed
-                      </td>            
-                </tr>
-                <tr>
-                    <td><strong>Afternoon</strong></td>
-                      <td>
-                        13:00 <br>
-                        18:00
-                      </td>
-                      <td>
-                        13:00 <br>
-                        18:00
-                      </td>
-                      <td>
-                        13:00 <br>
-                        18:00
-                      </td>
-                      <td>
-                        13:00 <br>
-                        18:00
-                      </td>
-                      <td>
-                        13:00 <br>
-                        18:00
-                      </td>
-                      <td>
-                        13:00 <br>
-                        15:00
-                      </td>
-                </tr>
-            </tbody>
-        </table>
-    </section>
-
-    <form class="contact">
-        <h2 id="contact">Need to fix a tech problem?</h2>
-
-        <label for="nome"><p>Write your name</p></label>
-        <input type="text" id="nome" placeholder="Write your name:" required>
-        <label for="email"><p>Inform your e-mail</p></label>
-        <input type="text" id="email" placeholder="E-mail:" required>
-        <label for="tel"><p>Write your tel</p></label>
-        <input type="number" id="tel" placeholder="Tel: ">
-        <label for="nome"><p>Describe your problem</p></label>
-        <input type="text" id="nome" placeholder="Briefly describe your problem:"><br>
-        <button type="submit">Submit</button>
-    </form>
-
-
-    <footer>
-        <h2>© TechFix - 2025 Todos os direitos reservados TechFix</h2>
-    </footer>
+    <table width="100%" border="0" cellspacing="0" cellpadding="10" style="background-color: #3498db; color: white;">
+        <tr>
+            <td><h1>TechFix Soluções</h1></td>
+        </tr>
+    </table>
+    <table width="100%" border="1" cellspacing="0" cellpadding="10" style="background-color: #2980b9; color: white;">
+        <tr>
+            <td><a href="#" style="color: white; text-decoration: none;">Início</a></td>
+            <td><a href="#" style="color: white; text-decoration: none;">Serviços</a></td>
+            <td><a href="#" style="color: white; text-decoration: none;">Contato</a></td>
+        </tr>
+    </table>
+    <table width="80%" align="center" border="1" cellspacing="0" cellpadding="10" style="margin-top: 20px;">
+        <tr>
+            <td style="text-align: left;">
+                <h2>Bem-vindo à TechFix Soluções</h2>
+                <p>Especialistas em suporte técnico remoto e manutenção de computadores.</p>
+                <h3>Horário de Funcionamento</h3>
+                <table border="1" cellspacing="0" cellpading="8">
+                    <thead>
+                        <tr>
+                            <th>Segunda a <br>
+                                Sexta
+                            </th>
+                            <th>Sábado</th>
+                            <th>Domingo</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>08:00 <br>
+                                18:00
+                            </td>
+                            <td>09:00 <br>
+                                14:00
+                            </td>
+                            <td>Fechado</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </td>
+        </tr>
+    </table>
+    <table width="80%" align="center" border="1" cellspacing="0" cellpadding="10" style="margin-top: 20px;">
+        <tr style="background-color: #ecf0f1;">
+            <td><h3>FAQ - Perguntas Frequentes</h3></td>
+        </tr>
+        <tr>
+            <td><strong>1. Como posso solicitar suporte técnico?</strong><br>Você pode entrar em contato via WhatsApp, e-mail ou formulário no site.</td>
+        </tr>
+        <tr>
+            <td><strong>2. Vocês atendem presencialmente?</strong><br>Atendemos apenas de forma remota.</td>
+        </tr>
+        <tr>
+            <td><strong>3. Quais serviços vocês oferecem?</strong><br>Formatação, remoção de vírus, otimização de desempenho e suporte técnico.</td>
+        </tr>
+    </table>
 </body>
 </html>
