Criação techfix usando display grid e alterações no blog

--- a/index.html
+++ b/index.html
@@ -75,8 +75,16 @@
             <h3>CoffeShop</h3>
             <img class="projeto" src="./portifolio/assets/img/americano.jfif" alt="">
         </a>
-        <a href="./techfix/index.html">
-            <h3>TechFix</h3>
+        <a href="./blog/index.html">
+            <h3>Blog</h3>
+            <img class="projeto" src="./portifolio/assets/img/image.png" alt="">
+        </a>
+        <a href="./techfix flex/index.html">
+            <h3>TechFix - Flex</h3>
+            <img class="projeto" src="./portifolio/assets/img/techfix.webp" alt="">
+        </a>
+        <a href="./techfix grid/index.html">
+            <h3>TechFix - Grid</h3>
             <img class="projeto" src="./portifolio/assets/img/techfix.webp" alt="">
         </a>
         <a href="./formularios/index.html">
@@ -93,10 +101,6 @@
         </a>
         <a href="./sitetabelas/index.html">
             <h3>Table Site</h3>
-            <img class="projeto" src="./portifolio/assets/img/ᴋɪɴɢ ᴅɪᴄᴇ ɪᴄᴏɴ.jfif" alt="">
-        </a>
-        <a href="">
-            <h3>Estudos</h3>
             <img class="projeto" src="./portifolio/assets/img/ᴋɪɴɢ ᴅɪᴄᴇ ɪᴄᴏɴ.jfif" alt="">
         </a>
     </section>
