--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
             <h3>Table Site</h3>
             <img class="projeto" src="./portifolio/assets/img/ᴋɪɴɢ ᴅɪᴄᴇ ɪᴄᴏɴ.jfif" alt="">
         </a>
+        <a href="#">
+            <h3>Estudos</h3>
+            <img class="projeto" src="./portifolio/assets/img/ᴋɪɴɢ ᴅɪᴄᴇ ɪᴄᴏɴ.jfif" alt="">
+        </a>
     </section>
 </body>
 </html>
