Alterações no blog, tá muito lindo slk

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <main class="apresentacao" id="home">
-        <img src="./portifolio/assets/img/ᴋɪɴɢ ᴅɪᴄᴇ ɪᴄᴏɴ.jfif" alt="foto perfil">
+        <img src="./portifolio/assets/img/Selfie.jpg" alt="foto perfil">
         <section>
             <h1>Hey, i'am João Moscardi</h1>
             <h2>Professional Full-Stack Developer</h2>
