Criação do baralho e alterações no blog

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
             <h3>CoffeShop</h3>
             <img class="projeto" src="./portifolio/assets/img/americano.jfif" alt="">
         </a>
+        <a href="./baralho/index.html">
+            <h3>Baralho</h3>
+            <img class="projeto" src="./baralho/assets/img/back-card.png" alt="">
+        </a>
         <a href="./blog/index.html">
             <h3>Blog</h3>
             <img class="projeto" src="./portifolio/assets/img/image.png" alt="">
