Utilização de pseudo-classes e elementos nos projetos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <h1>João Moscardi - Full-Stack Developer</h1>
+        <h1>João Moscardi</h1>
         <nav class="navbar">
             <a href="#home">HOME</a>
             <a href="#stacks">STACKS</a>
@@ -25,7 +25,19 @@
             <p>Studying the 3rd(third) semester of<br> Analise e desenvolvimento de Sistemas <br>
             at Universidade Cruzeiro do Sul, passionate about technology <br>
             and participant in Alpar Service's Rocket Program 2.0</p>
+            <section class="social-medias">
+                <a href="https://www.linkedin.com/in/moscardijoao/">
+                    <img src="./portifolio/assets/img/linkedin.png" alt="">
+                </a>
+                <a href="https://github.com/J0ax771zz">
+                    <img src="./portifolio/assets/img/github.png" alt="">
+                </a>
+                <a href="./portifolio/assets/João Paulo Moscardi.docx (1).pdf">
+                    <img src="./portifolio/assets/img/curriculo.png" alt="">
+                </a>
+            </section>
         </section>
+        
     </main>
 
     <section class="stacks" id="stacks">
