Adicionando resposividade aos posts do blog e algumas modificações em outros sites

--- a/cafeteria/index.html
+++ b/cafeteria/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/style.css">
-    <title>DevCoffe</title>
+    <title>DevCoffee</title>
 </head>
 <body>
     <header>
         <section class="cabecalho">
             <h1>Dev</h1>
             <img src="./assets/img/logo.png" width="170px" alt="logo cafeteria DevCoffe">
-            <h1>Coffe</h1>
+            <h1>Coffee</h1>
         </section>
         <section class="navbar">
             <nav>
