tornando portifolio responsivo, e com ótima avaliação do LightHouse

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Desenvolvedor fullstack especializado em .NET, React, Next.js e TypeScript. Confira meu portfólio com projetos e experiências na criação de APIs, e-commerces e SaaS." />
     <link rel="stylesheet" href="./portifolio/assets/styles/style.css">
     <title>João Moscardi - Full-Stack Developer</title>
 </head>
@@ -20,20 +21,20 @@
     <main class="apresentacao" id="home">
         <img src="./portifolio/assets/img/Selfie.jpg" alt="foto perfil">
         <section>
-            <h1>Hey, i'am João Moscardi</h1>
+            <h2 id="titulo-apresentacao">Hey, i'am João Moscardi</h2>
             <h2>Professional Full-Stack Developer</h2>
             <p>Studying the 3rd(third) semester of<br> Analise e desenvolvimento de Sistemas <br>
             at Universidade Cruzeiro do Sul, passionate about technology <br>
             and participant in Alpar Service's Rocket Program 2.0</p>
             <section class="social-medias">
-                <a href="https://www.linkedin.com/in/moscardijoao/">
-                    <img src="./portifolio/assets/img/linkedin.png" alt="">
+                <a href="https://www.linkedin.com/in/moscardijoao/" aria-describedby="link linkedIn">
+                    <img src="./portifolio/assets/img/linkedin.png" alt="imagem linkedIn">
                 </a>
-                <a href="https://github.com/J0ax771zz">
-                    <img src="./portifolio/assets/img/github.png" alt="">
+                <a href="https://github.com/J0ax771zz" aria-describedby="link github">
+                    <img src="./portifolio/assets/img/github.png" alt="imagem github">
                 </a>
-                <a href="./portifolio/assets/João Paulo Moscardi.docx (1).pdf">
-                    <img src="./portifolio/assets/img/curriculo.png" alt="">
+                <a href="./portifolio/assets/João Paulo Moscardi.docx (1).pdf" aria-describedby="link curriculo">
+                    <img src="./portifolio/assets/img/curriculo.png" alt="imagem portifólio">
                 </a>
             </section>
         </section>
@@ -83,45 +84,37 @@
     <h2 class="myprojects">My Projects</h2>
 
     <section class="projects" id="projects">
-        <a href="./cafeteria/index.html">
+        <a href="./cafeteria/index.html" aria-describedby="link projeto cafeteria">
             <h3>CoffeShop</h3>
             <img class="projeto" src="./portifolio/assets/img/americano.jfif" alt="">
         </a>
-        <a href="./baralho/index.html">
+        <a href="./baralho/index.html" aria-describedby="link projeto baralho">
             <h3>Baralho</h3>
             <img class="projeto" src="./baralho/assets/img/back-card.png" alt="">
         </a>
-        <a href="./blog/index.html">
+        <a href="./blog/index.html" aria-describedby="link projeto blog">
             <h3>Blog</h3>
             <img class="projeto" src="./portifolio/assets/img/image.png" alt="">
         </a>
-        <a href="./techfix flex/index.html">
+        <a href="./techfix flex/index.html" aria-describedby="link projeto display flex">
             <h3>TechFix - Flex</h3>
             <img class="projeto" src="./portifolio/assets/img/techfix.webp" alt="">
         </a>
-        <a href="./techfix grid/index.html">
+        <a href="./techfix grid/index.html" aria-describedby="link projeto display grid">
             <h3>TechFix - Grid</h3>
             <img class="projeto" src="./portifolio/assets/img/techfix.webp" alt="">
         </a>
-        <a href="./formularios/index.html">
-            <h3>Forms</h3>
-            <img class="projeto" src="./portifolio/assets/img/forms.webp" alt="">
-        </a>
-        <a href="./podcast/index.html">
+        <a href="./podcast/index.html" aria-describedby="link projeto podcast">
             <h3>Podcast</h3>
             <img class="projeto" src="./portifolio/assets/img/logo.png" alt="">
         </a>
-        <a href="./card/index.html">
+        <a href="./card/index.html" aria-describedby="link projeto clone linktree">
             <h3>Card - LinkTree</h3>
             <img class="projeto" src="./portifolio/assets/img/linktree.webp" alt="">
         </a>
-        <a href="./sitetabelas/index.html">
+        <a href="./sitetabelas/index.html" aria-describedby="link projeto com tabelas">
             <h3>Table Site</h3>
-            <img class="projeto" src="./portifolio/assets/img/ᴋɪɴɢ ᴅɪᴄᴇ ɪᴄᴏɴ.jfif" alt="">
-        </a>
-        <a href="#">
-            <h3>Estudos</h3>
-            <img class="projeto" src="./portifolio/assets/img/ᴋɪɴɢ ᴅɪᴄᴇ ɪᴄᴏɴ.jfif" alt="">
+            <img class="projeto" src="./portifolio/assets/img/techfix.webp" alt="">
         </a>
     </section>
 </body>
